fix: Allow clicking message list scrollbar behind message action button area.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -528,6 +528,14 @@ a.mainMenu, mat-menu a, .mat-nav-list a {
 
 /* Context tool buttons */
 
+.contextToolButtons {
+    margin-right: 16px;
+}
+
+.contextToolButtons button {
+    margin-right: 0px !important;
+}
+
 @media(max-width: 812px) {
     .contextToolButtons {
 	top: 90px !important;
